--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,9 @@ contact_links:
   - name: 新技能/天赋提案
     url: https://github.com/Heart-Fire-Project/Midsoul/discussions/new?category=%E6%96%B0%E7%82%B9%E5%AD%90
     about: 如果有新点子的话就用这个
+  - name: 能力平衡性讨论
+    url: https://github.com/Heart-Fire-Project/Midsoul/discussions/new?category=%E5%B9%B3%E8%A1%A1%E6%80%A7%E8%AE%A8%E8%AE%BA
+    about: 觉得平衡有待改善就用这个
   - name: 在社区中提问
     url: https://github.com/Heart-Fire-Project/Midsoul/discussions/new?category=q-a
     about: 对什么东西抱有小小的疑问就用这个
